<resources>
    <string name="app_name">hpccloud</string>
    <string name="sign_out">sign out</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="projects">Projects</string>
    <string name="jobs">Jobs</string>
    <string name="documents">Documents</string>
    <string name="user_info">User info</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="access_code">access code</string>
    <string name="retype_password">retype password</string>


</resources>